--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-intl": "^3.1.2",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-react-buttons": "^7.1.0",
+    "@progress/kendo-react-common": "^7.1.0",
+    "@progress/kendo-react-dialogs": "^7.1.0",
+    "@progress/kendo-react-dropdowns": "^7.1.0",
+    "@progress/kendo-react-editor": "^7.1.0",
+    "@progress/kendo-react-gauges": "^7.1.0",
+    "@progress/kendo-react-inputs": "^7.1.0",
+    "@progress/kendo-react-intl": "^7.1.0",
+    "@progress/kendo-react-layout": "^7.1.0",
+    "@progress/kendo-react-pdf": "^7.1.0",
+    "@progress/kendo-react-popup": "^7.1.0",
+    "@progress/kendo-react-progressbars": "^7.1.0",
+    "@progress/kendo-svg-icons": "^2.1.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-media-recorder": "^1.6.6",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
